--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,10 @@ runs/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+
+.gradle/
+.idea/
+.build/
+gradle/
+run
