--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,7 +8,7 @@ Max_Level: 28 # Just provide the Maximum level.
 '1':
   level-name: "Level: 1 - Podzol & melon"
   progress-bar-color: GREEN
-  level-size: 16
+  level-size: 20
   blocks:
     - PODZOL
     - GRASS_BLOCK
@@ -20,11 +20,13 @@ Max_Level: 28 # Just provide the Maximum level.
 '2':
   level-name: "Level: 2 - Forest"
   progress-bar-color: GREEN
-  level-size: 32
+  level-size: 50
   blocks:
     - BIRCH_LOG
     - OAK_LOG
     - OAK_LEAVES
+    - DIRT
+    - GRASS_BLOCK
   mobs:
     - SHEEP
     - COW
@@ -51,6 +53,7 @@ Max_Level: 28 # Just provide the Maximum level.
     - GRANITE
     - DIORITE
     - ANDESITE
+    - OAK_LOG
   mobs: []
 
 '5':
@@ -66,7 +69,7 @@ Max_Level: 28 # Just provide the Maximum level.
 '6':
   level-name: "Level: 6 - Ore deposit"
   progress-bar-color: GREEN
-  level-size: 32
+  level-size: 100
   blocks:
     - IRON_ORE
     - COARSE_DIRT
@@ -77,6 +80,7 @@ Max_Level: 28 # Just provide the Maximum level.
     - ANDESITE
     - STONE
     - COBBLESTONE
+    - OAK_LOG
   mobs: []
 
 '7':
@@ -101,6 +105,8 @@ Max_Level: 28 # Just provide the Maximum level.
     - SPRUCE_LOG
     - DARK_OAK_LOG
     - SPRUCE_LEAVES
+    - DIRT
+    - GRASS_BLOCK
   mobs: []
 
 '9':
@@ -117,12 +123,15 @@ Max_Level: 28 # Just provide the Maximum level.
 '10':
   level-name: "Level: 10 - Snow?"
   progress-bar-color: GREEN
-  level-size: 40
+  level-size: 64
   blocks:
     - IRON_ORE
     - INFESTED_STONE
     - SNOW_BLOCK
     - PACKED_ICE
+    - SPRUCE_LOG
+    - DIRT
+    - GRASS_BLOCK
   mobs: []
 
 '11':
@@ -140,7 +149,7 @@ Max_Level: 28 # Just provide the Maximum level.
 '12':
   level-name: "Level: 12 - Acacia & mushrooms"
   progress-bar-color: GREEN
-  level-size: 64
+  level-size: 90
   blocks:
     - ACACIA_LOG
     - ACACIA_LEAVES
@@ -148,17 +157,21 @@ Max_Level: 28 # Just provide the Maximum level.
     - BROWN_MUSHROOM_BLOCK
     - RED_MUSHROOM_BLOCK
     - PUMPKIN
+    - DIRT
+    - GRASS_BLOCK
   mobs:
     - MUSHROOM_COW
 
 '13':
   level-name: "Level: 13 - Sea"
   progress-bar-color: GREEN
-  level-size: 32
+  level-size: 50
   blocks:
     - PRISMARINE_BRICKS
     - DARK_PRISMARINE
     - SEA_LANTERN
+    - OAK_LOG
+    - DIRT
   mobs:
     - GUARDIAN
     - ELDER_GUARDIAN
@@ -176,7 +189,7 @@ Max_Level: 28 # Just provide the Maximum level.
 '15':
   level-name: "Level: 15 - Mangrove swamp"
   progress-bar-color: GREEN
-  level-size: 32
+  level-size: 50
   blocks:
     - MANGROVE_LEAVES
     - Mangrove_Log
@@ -196,6 +209,8 @@ Max_Level: 28 # Just provide the Maximum level.
     - CUT_SANDSTONE
     - CARVED_PUMPKIN
     - OBSIDIAN
+    - OAK_LO
+    - DIRT
   mobs: []
 
 '17':
@@ -206,6 +221,7 @@ Max_Level: 28 # Just provide the Maximum level.
     - NETHERRACK
     - GLOWSTONE
     - SOUL_SAND
+    - CRIMSON_STEM
   mobs:
     - PILLAGER
     - ZOMBIFIED_PIGLIN
@@ -236,6 +252,9 @@ Max_Level: 28 # Just provide the Maximum level.
     - PINK_TERRACOTTA
     - NETHER_QUARTZ_ORE
     - BLACK_TERRACOTTA
+    - WARPED STEM
+    - STONE
+    - COBBLESTONE
   mobs:
     - PIGLIN
     - HOGLIN
@@ -259,7 +278,6 @@ Max_Level: 28 # Just provide the Maximum level.
     - CRIMSON_NYLIUM
     - WARPED_NYLIUM
     - AMETHYST_BLOCK
-    - DIAMOND_BLOCK
   mobs: []
 
 '22':
@@ -275,18 +293,20 @@ Max_Level: 28 # Just provide the Maximum level.
 '23':
   level-name: "Level: 23 - Ne..."
   progress-bar-color: GREEN
-  level-size: 32
+  level-size: 64
   blocks:
     - WARPED_STEM
     - OXIDIZED_COPPER
     - NETHER_GOLD_ORE
+    - DEEPSLATE
+    - CHISELED_DEEPSLATE
   mobs:
     - high_chest
 
 '24':
   level-name: "Level: 24 - Ancient City"
   progress-bar-color: GREEN
-  level-size: 64
+  level-size: 80
   blocks:
     - Deepslate
     - Cobbled_Deepslate
@@ -303,6 +323,8 @@ Max_Level: 28 # Just provide the Maximum level.
     - Lectern
     - REDSTONE_BLOCK
     - Target
+    - DIRT
+    - GRASS_BLOCK
   mobs: []
 
 '25':
@@ -325,16 +347,27 @@ Max_Level: 28 # Just provide the Maximum level.
     - BLACKSTONE
     - DEEPSLATE_BRICKS
     - CRACKED_DEEPSLATE_BRICKS
+    - WARPED STEM
+    - DIRT
   mobs: []
 
 '27':
   level-name: "Level: 27"
   progress-bar-color: GREEN
-  level-size: 10
+  level-size: 90
   blocks:
-    - NETHERITE_BLOCK
     - ANCIENT_DEBRIS
     - POLISHED_BLACKSTONE
+    - NETHERRACK
+    - BLACKSTONE
+    - NETHER_BRICKS
+    - GRAVEL
+    - SOUL_SAND
+    - GLOWSTONE
+    - CHISELED_POLISHED_BLACKSTONE
+    - BLACKSTONE_BRICKS
+    - NETHER_GOLD_ORE
+    - NETHER_QUARTZ_ORE
   mobs: []
 
 '28':
@@ -346,6 +379,7 @@ Max_Level: 28 # Just provide the Maximum level.
     - CUT_SANDSTONE
     - CARVED_PUMPKIN
     - OBSIDIAN
+    - PUMPKIN
   mobs: []
 
 '0':
